@@ -90,13 +90,19 @@ class UtilsTests(ztc.ZopeTestCase):
         self.failUnless(isWildCard('fo*oo'))
         self.failUnless(isWildCard('fo?o*'))
         self.failUnless(isWildCard('*foo'))
+        self.failUnless(isWildCard('*foo*'))
         self.failUnless(isWildCard('foo* bar'))
         self.failUnless(isWildCard('foo bar?'))
         self.failUnless(isWildCard('*'))
         self.failUnless(isWildCard('?'))
+        self.failUnless(isWildCard(u'føø*'))
+        self.failUnless(isWildCard(u'føø*'.encode('utf-8')))
+        self.failUnless(isWildCard(u'*føø*'))
         self.failIf(isWildCard('foo'))
         self.failIf(isWildCard('fo#o'))
         self.failIf(isWildCard('foo bar'))
+        self.failIf(isWildCard(u'føø'))
+        self.failIf(isWildCard(u'føø'.encode('utf-8')))
         # other characters might be meaningful in solr, but we don't
         # distinguish them properly (yet)
         self.failIf(isWildCard('foo#?'))
