@@ -4,6 +4,9 @@ Changelog
 2.0a1 - Unreleased
 ------------------
 
+* Handle utf-8 encoded data correctly in `utils.isWildCard`.
+  [hannosch]
+
 * Gracefully handle exceptions raised during index data retrieval.
   [tom_gross, hannosch]
 
